--- a/src/components/reusable/IconCard.astro
+++ b/src/components/reusable/IconCard.astro
@@ -1,5 +1,5 @@
 ---
-import "../styles/global.css";
+import "../../styles/global.css";
 // Definimos la interfaz para estructurar los props
 interface Props {
     title: string;
