--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -33,6 +33,7 @@
         /* Header General */
         .site-header {
             width: 100%;
+            height: 4vh;
             background-color: rgba(0, 0, 0, 0.9); /* Fondo oscuro */
             color: white;
             padding: 0.75rem 0; /* Espaciado interno */
