--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -1,9 +1,13 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@200;700&display=swap');
 
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
 .roboto-light {
     font-family: 'Roboto', sans-serif;
-    font-weight: 200;
 }
+
 
 .roboto-bold {
     font-family: 'Roboto', sans-serif;
