--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -17,9 +17,9 @@
         <!-- Menú de Navegación -->
         <nav class="navbar">
             <ul class="navbar-ul">
-                <li><a class="navbar-ul-a" href="#hero">Inicio</a></li>
-                <li><a class="navbar-ul-a" href="#about">Sobre mí</a></li>
-                <li><a class="navbar-ul-a" href="#projects">Proyectos</a></li>
+                <li><a class="navbar-ul-a" href="/">Inicio</a></li>
+                <li><a class="navbar-ul-a" href="#projects">Sobre mí</a></li>
+                <li><a class="navbar-ul-a" href="/projects">Proyectos</a></li>
                 <li>
                     <a class="navbar-ul-a navbar-ul-a-contact" href="#contact"
                         >Contacto</a
@@ -33,7 +33,7 @@
         /* Header General */
         .site-header {
             width: 100%;
-            height: 4vh;
+            height: 6.5vh;
             background-color: rgba(0, 0, 0, 0.9); /* Fondo oscuro */
             color: white;
             padding: 0.75rem 0; /* Espaciado interno */
